<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    android:padding="20dp"
    tools:context=".Activity.ForgotPasswordActivity">


    <ImageView
        android:id="@+id/imgBackActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Quên mật khẩu"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        style="@style/subTitle_fgpsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login_fgpsw_title"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail_forgot_psw_1"
        style="@style/TextLayoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/login_email"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginNote"
        app:startIconDrawable="@drawable/ic_account_menu"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmail_forgotpsw"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_forgotpsw"
        style="@style/ButtonWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="28dp"
        android:textColor="@color/white"
        android:text="Xác nhận"
        />

    <TextView
        android:id="@+id/tv_Signin"
        style="@style/sign_up_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_sub_title" />
</LinearLayout>